add:combobox and adjust navbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -58,13 +58,13 @@
 	--popover: oklch(1 0 0);
 	--popover-foreground: oklch(0.145 0 0);
 	--primary: #c89f37;
-	--primary-foreground: #c5ae74;
+	--primary-foreground: #2f291a;
 	--secondary: #ecce83;
-	--secondary-foreground: #e7d4a3;
+	--secondary-foreground: #1b1810;
 	--muted: oklch(0.97 0 0);
 	--muted-foreground: oklch(0.556 0 0);
 	--accent: #f5c447;
-	--accent-foreground: #f5d37d;
+	--accent-foreground: #2a2519;
 	--destructive: oklch(0.577 0.245 27.325);
 	--border: oklch(0.922 0 0);
 	--input: oklch(0.922 0 0);
@@ -94,13 +94,13 @@
 	--popover: oklch(0.205 0 0);
 	--popover-foreground: oklch(0.985 0 0);
 	--primary: #c89f37;
-	--primary-foreground: oklch(0.205 0 0);
+	--primary-foreground: oklch(85.142% 0.0001 271.152);
 	--secondary: #7c5e13;
-	--secondary-foreground: oklch(0.985 0 0);
+	--secondary-foreground: oklch(77.944% 0.00009 271.152);
 	--muted: oklch(0.269 0 0);
 	--muted-foreground: oklch(0.708 0 0);
 	--accent: #b8870a;
-	--accent-foreground: oklch(0.985 0 0);
+	--accent-foreground: oklch(26.448% 0.00003 271.152);
 	--destructive: oklch(0.704 0.191 22.216);
 	--border: oklch(1 0 0 / 10%);
 	--input: oklch(1 0 0 / 15%);
