adjust:theme+add: prject page

--- a/app/globals.css
+++ b/app/globals.css
@@ -152,10 +152,9 @@
 	--sidebar-border: oklch(1 0 0 / 10%);
 	--sidebar-ring: oklch(0.556 0 0);
 }
-
 @layer base {
 	* {
-		@apply border-border outline-ring/50;
+		@apply border-border outline-ring/50 transition-colors duration-100;
 	}
 	body {
 		@apply bg-background text-foreground ;
