--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -184,3 +184,11 @@
 .no-visible-scrollbar::-webkit-scrollbar {
   display: none;
 }
+.text-outline {
+  -webkit-text-stroke: 2px rgb(255, 255, 255); /* outline thickness + color */
+  color: transparent; /* if you only want the stroke */
+}
+.text-outline:hover {
+	-webkit-text-stroke: 2.5px rgb(255, 255, 255); /* outline thickness + color on hover */
+	color: transparent; /* if you only want the stroke on hover */
+}
